# praven-pro

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DEPENDENCIES.md  FINAL_SUMMARY.txt  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  READY_TO_DEPLOY.txt  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py  validate.py  web_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/models/: gaulossen_validation_model.pkl  gaulossen_weather_activity.json
data/validation_output/: validation_dashboard.html
docs/: AUTO_DETECTION_FEATURES.md  CSV_FORMAT.md  DIAGRAMS.md  EXTENSIONS_SUMMARY.md  FINAL_SCREENSHOTS.md  FUTURE_ENHANCEMENTS.md  GITHUB_PAGES_SETUP.md  PRAVEN_2.0_SUMMARY.md  PROCESS_FLOW.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  REPOSITORY_STRUCTURE.md  SCREENSHOTS.md  SCREENSHOT_INSTRUCTIONS.md  TECHNICAL_SUMMARY.md  _config.yml  index.html
docs/guides/: SMART_REVIEW_GUIDE.md
docs/images/: cli_help.txt  cli_help_render.txt  cli_validation_output.txt
docs/results/: GAULOSSEN_RESULTS.md
docs/scientific/: SCIENTIFIC_VALIDATION_RESULTS.md
examples/: README.md  analyze_validation_results.py  automated_batch_analysis.py  basic_validation.py  generate_visualizations.py  pipeline_demo.py  scientific_validation_demo.py  taxonomic_validation_demo.py  validate_csv.py  validate_gaulossen.py  validate_gaulossen_fast.py
examples/smart_review_demo/: praven_results_20251022_032840_PRIORITY_REVIEW.csv  praven_results_20251022_032840_accepted.csv  praven_results_20251022_032840_full.csv  praven_results_20251022_032840_rejected.csv  (+2 more)
mcp-integration/: README.md  docker-compose.yml  setup.sh
notebooks/: bird_audio_batch_analysis.ipynb
praven/: __init__.py  config.py  pipeline.py  review_selector.py  validator.py  visualization.py
tests/: test_auto_detection.py
validation/: gaulossen_all_detections.csv  gaulossen_ground_truth.csv  praven_results_20251022_040713_rejected.csv  praven_results_20251022_040733_review.csv  praven_results_20251022_041327_PRIORITY_REVIEW.csv  praven_results_20251022_041327_accepted.csv  praven_results_20251022_041327_full.csv  scientific_validation.py  scientific_validation_report.txt
(+30 files in other folders)
